--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,35 @@
     padding: 20px;
     width: 300px;
 }
+
+#box-1 {
+    border: 1px solid #000;
+}
+
+#box-2 {
+    border: 1px dashed #000;
+}
+
+#box-3 {
+    border: 1px dotted #000;
+}
+
+#box-4 {
+    border: 3px double #000;
+}
+
+#box-5 {
+    border: 3px solid #000;
+}
+
+#box-6 {
+    border: 3px dashed #000;
+}
+
+#box-7 {
+    border: 3px dotted #000;
+}
+
+#box-8 {
+    border: 5px double #000;
+}
